--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>PaydayTrade</name>
     <description>PaydayTrade</description>
     <properties>
-        <java.version>22</java.version>
+        <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -45,11 +45,11 @@
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>8.0.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-            <version>3.0.4</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -73,8 +73,6 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>3.2.5</version>
         </dependency>
-
-
 
     </dependencies>
 
