--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=PaydayTrade
 
-spring.profiles.include=database,security,server
+spring.profiles.include=database,security,server,smtp
