--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=PaydayTrade
 
 spring.profiles.include=database,security,server,smtp,thirdParty
+logging.level.org.springframework.security=DEBUG
